fixes #2 - a simple example of using an enumeration in C++.

--- a/config/make.conf
+++ b/config/make.conf
@@ -8,5 +8,5 @@ WFLAGS=-Wall -Wextra -Werror -Winit-self -Wredundant-decls -Wshadow -Winline -Ws
 INC=-I/usr/include -IEnumeration -IFactory -IInheritance -ISharedPointer -ISingleton -ITemplate -IThreads -IVector -IDeque -IOverload
 USRINC=-I/usr/include
 STATICLIBS=-L/usr/lib -L../obj -lInheritance -lEnumExample -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lOverloadExample
-LIBS=-L/usr/lib -L../bin # -lInheritance -lEnumExample -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lOverloadExample
+LIBS=-L/usr/lib -L../obj -lUseEnumeration # -lInheritance -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lOverloadExample
 RMFORCE=rm -f
