Fixes #4 - Inheritance example based on shapes, with three shapes currently, Circle, Rectangle, and Triangle.  This also ties into the Enumeration class

--- a/config/make.conf
+++ b/config/make.conf
@@ -10,3 +10,4 @@ USRINC=-I/usr/include
 STATICLIBS=-L/usr/lib -L../obj -lInheritance -lEnumExample -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lOverloadExample
 LIBS=-L/usr/lib -L../obj -lUseEnumeration -lUseInheritance # -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lOverloadExample
 RMFORCE=rm -f
+SHAPEOBJS=Inheritance/Shape.o Inheritance/Circle.o Inheritance/Rectangle.o Inheritance/Triangle.o
