Fixes #12 - adds an example using references

--- a/config/make.conf
+++ b/config/make.conf
@@ -8,6 +8,6 @@ WFLAGS=-Wall -Wextra -Werror -Winit-self -Wredundant-decls -Wshadow -Winline -Ws
 INC=-I/usr/include -IEnumeration -IFactory -IInheritance -ISharedPointer -ISingleton -ITemplate -IThreads -IVector -IDeque -IOverload
 USRINC=-I/usr/include
 STATICLIBS=-L/usr/lib -L../obj -lInheritance -lEnumExample -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lOverloadExample
-LIBS=-L/usr/lib -L../obj -lUseEnumeration -lUseInheritance -lUseFactory -lUseVector -lUseDeque # -lSingletonClass -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lOverloadExample
+LIBS=-L/usr/lib -L../obj -lUseEnumeration -lUseInheritance -lUseFactory -lUseVector -lUseDeque -lUseReference # -lSingletonClass -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lOverloadExample
 RMFORCE=rm -f
 SHAPEOBJS=Inheritance/Shape.o Inheritance/Circle.o Inheritance/Rectangle.o Inheritance/Triangle.o
