--- a/config/make.conf
+++ b/config/make.conf
@@ -7,7 +7,7 @@ EXEFLAGS=-pthread -std=c++0x
 WFLAGS=-Wall -Wextra -Werror -Winit-self -Wredundant-decls -Wshadow -Winline -Wswitch-default -Wswitch-enum -Wunsafe-loop-optimizations -pedantic -Wno-long-long -Wformat=2 -Wmissing-braces -Woverloaded-virtual -Wmissing-include-dirs -Wconversion -Weffc++ -Wreorder -Wold-style-cast
 INC=-I/usr/include -IEnumeration -IFactory -IInheritance -ISharedPointer -ISingleton -ITemplate -IThreads -IVector -IDeque -IOverload
 USRINC=-I/usr/include
-STATICLIBS=-L/usr/lib -L../obj -lInheritance -lEnumExample -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lOverloadExample
-LIBS=-L/usr/lib -L../obj -lUseEnumeration -lUseInheritance -lUseFactory -lUseVector -lUseDeque -lUseReference # -lSingletonClass -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lOverloadExample
+STATICLIBS=-L/usr/lib -L../obj -lInheritance -lEnumExample -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lUseOverload
+LIBS=-L/usr/lib -L../obj -lUseEnumeration -lUseInheritance -lUseFactory -lUseVector -lUseDeque -lUseReference -lUseOverload # -lSingletonClass -lEnableSharedFromThis -lResultsNodeT -lThreadExample
 RMFORCE=rm -f
 SHAPEOBJS=Inheritance/Shape.o Inheritance/Circle.o Inheritance/Rectangle.o Inheritance/Triangle.o
