--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,13 @@
 # src/Makefile
 include ../config/make.conf
 
-all: CppExample ../obj/libUseEnumeration.a ../obj/libUseInheritance.a ../obj/libUseFactory.a ../obj/libUseVector.a ../obj/libUseDeque.a ../obj/libUseReference.a ../obj/libUseOverload.a
+all: CppExample ../obj/libUseEnumeration.a ../obj/libUseInheritance.a ../obj/libUseFactory.a ../obj/libUseVector.a ../obj/libUseDeque.a ../obj/libUseReference.a ../obj/libUseOverload.a ../obj/libUseBuilder.a
 
-clean: cleanEnumeration cleanInheritance cleanFactory cleanVector cleanDeque cleanReference cleanOverload
+clean: cleanEnumeration cleanInheritance cleanFactory cleanVector cleanDeque cleanReference cleanOverload cleanBuilder
 	$(RMFORCE) CppExample
 	$(RMFORCE) ../bin/CppExample
 
-CppExample: CppExample.cpp ../obj/libUseEnumeration.a ../obj/libUseInheritance.a ../obj/libUseFactory.a ../obj/libUseVector.a ../obj/libUseDeque.a ../obj/libUseReference.a ../obj/libUseOverload.a
+CppExample: CppExample.cpp ../obj/libUseEnumeration.a ../obj/libUseInheritance.a ../obj/libUseFactory.a ../obj/libUseVector.a ../obj/libUseDeque.a ../obj/libUseReference.a ../obj/libUseOverload.a ../obj/libUseBuilder.a
 	$(CC) $(INC) CppExample.cpp $(LIBS) -o CppExample $(EXEFLAGS) #$(WFLAGS)
 	cp CppExample ../bin/
 
@@ -128,3 +128,24 @@ cleanFactory:
 	
 Pattern/Factory/UseFactory.o: Pattern/Factory/UseFactory.cpp
 	$(CC) $(CFLAGS) $(INC) -o Pattern/Factory/UseFactory.o Pattern/Factory/UseFactory.cpp
+
+#####################################
+##### Build the Builder Example #####
+cleanBuilder:
+	$(RMFORCE) Pattern/Builder/UseBuilder.o
+	$(RMFORCE) Pattern/Builder/libUseBuilder.a
+	$(RMFORCE) ../obj/libUseBuilder.a
+
+../obj/libUseBuilder.a: Pattern/Builder/TriangleBuilder.o Pattern/Builder/RectangleBuilder.o Pattern/Builder/ShapeBuilder.o ../obj/libUseInheritance.a
+	ar rvs Pattern/Builder/libUseBuilder.a Pattern/Builder/ShapeBuilder.o Pattern/Builder/RectangleBuilder.o Pattern/Builder/TriangleBuilder.o
+	cp Pattern/Builder/libUseBuilder.a ../obj
+	
+Pattern/Builder/ShapeBuilder.o: Pattern/Builder/ShapeBuilder.cpp
+	$(CC) $(CFLAGS) $(INC) -o Pattern/Builder/ShapeBuilder.o Pattern/Builder/ShapeBuilder.cpp
+	
+Pattern/Builder/RectangleBuilder.o: Pattern/Builder/RectangleBuilder.cpp
+	$(CC) $(CFLAGS) $(INC) -o Pattern/Builder/RectangleBuilder.o Pattern/Builder/RectangleBuilder.cpp
+	
+Pattern/Builder/TriangleBuilder.o: Pattern/Builder/TriangleBuilder.cpp
+	$(CC) $(CFLAGS) $(INC) -o Pattern/Builder/TriangleBuilder.o Pattern/Builder/TriangleBuilder.cpp
+	
