More work on #23 - I forgot to build before I checked in the fix...

--- a/config/make.conf
+++ b/config/make.conf
@@ -10,4 +10,4 @@ USRINC=-I/usr/include
 STATICLIBS=-L/usr/lib -L../obj -lInheritance -lEnumExample -lSingletonClass -lFactory -lEnableSharedFromThis -lResultsNodeT -lThreadExample -lUseVector -lUseDeque -lUseOverload -lUseBuilder
 LIBS=-L/usr/lib -L../obj -lUseEnumeration -lUseInheritance -lUseFactory -lUseVector -lUseDeque -lUseReference -lUseOverload -lUseBuilder # -lSingletonClass -lEnableSharedFromThis -lResultsNodeT -lThreadExample
 RMFORCE=rm -f
-SHAPEOBJS=Inheritance/Shape.o Inheritance/Circle.o Inheritance/Rectangle.o Inheritance/Triangle.o
+SHAPEOBJS=Concept/Inheritance/Shape.o Concept/Inheritance/Circle.o Concept/Inheritance/Rectangle.o Concept/Inheritance/Triangle.o
