Modifications to build for C++98 along with C++11.

--- a/config/make.conf
+++ b/config/make.conf
@@ -1,8 +1,10 @@
-CC=/usr/bin/g++
+CC=/usr/bin/g++ -g
 FPICFLAGS=-fpic
 STATICCFLAGS=-pthread -std=c++0x -static -static-libgcc
 SHAREDFLAGS=-shared
 CFLAGS=-std=c++11 -c
+# CFLAGS=-std=c++98 -c
+# CFLAGS=-c
 EXEFLAGS=-pthread -std=c++0x
 WFLAGS=-Wall -Wextra -Werror -Winit-self -Wredundant-decls -Wshadow -Winline -Wswitch-default -Wswitch-enum -Wunsafe-loop-optimizations -pedantic -Wno-long-long -Wformat=2 -Wmissing-braces -Woverloaded-virtual -Wmissing-include-dirs -Wconversion -Weffc++ -Wreorder -Wold-style-cast
 INC=-I/usr/include -IEnumeration -IFactory -IInheritance -ISharedPointer -ISingleton -ITemplate -IThreads -IVector -IDeque -IOverload -IBuilder
